--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/kayjlou/Bamazon2#readme",
   "dependencies": {
     "inquirer": "^6.3.1",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "mysql2": "^1.6.5"
   }
 }
